@@ -477,7 +477,8 @@ values:
     $c : config name
     $o : org configuration
     $b : barcode of the volume
-    $s : slot number
+    $s : slot number, can specify a minimun number of digit:
+         $3s to get '001'
     $m : meta label
 </programlisting></para>
 <para>The template can contain some number of contiguous '%'
